// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/plugins /values-composed.js should ignore other @value types 1`] = `"@value * as fooga from \\"./local.css\\"; @value tooga: red;"`;

exports[`/plugins /values-composed.js should support importing a value from another file 1`] = `
Array [
  Object {
    "plugin": "modular-css-values-composed",
    "type": "modular-css",
    "values": Object {
      "fooga": Object {
        "source": Object {},
        "value": "red",
      },
    },
  },
]
`;

exports[`/plugins /values-composed.js should support importing multiple values from another file 1`] = `
Array [
  Object {
    "plugin": "modular-css-values-composed",
    "type": "modular-css",
    "values": Object {
      "fooga": Object {
        "source": Object {},
        "value": "red",
      },
      "googa": Object {
        "source": Object {},
        "value": "blue",
      },
    },
  },
]
`;
